crescentado diferenças apresentados no Plone-4.3.3-UI

--- a/buildout.d/backup.cfg
+++ b/buildout.d/backup.cfg
@@ -8,6 +8,10 @@ parts +=
 recipe = collective.recipe.backup
 location = ${buildout:backups-dir}/backups
 snapshotlocation = ${buildout:backups-dir}/snapshotbackups
+blobbackuplocation = ${buildout:backups-dir}/blobstoragebackups
+blobsnapshotlocation = ${buildout:backups-dir}/blobstoragesnapshots
+datafs = ${buildout:var-dir}/filestorage/Data.fs
+blob-storage = ${buildout:var-dir}/blobstorage
 keep = 3
 full = true
 gzip = false
