desativado o buildout.sanitycheck

--- a/buildout.d/0base.cfg
+++ b/buildout.d/0base.cfg
@@ -11,7 +11,7 @@ find-links =
     http://effbot.org/downloads
 
 extensions =
-    buildout.sanitycheck
+#    buildout.sanitycheck
 
 environment-vars =
     zope_i18n_compile_mo_files true
