corrigido os arquivos do extends

--- a/buildout.d/cluster.cfg
+++ b/buildout.d/cluster.cfg
@@ -1,7 +1,6 @@
 [buildout]
 extends =
-    base.cfg
-    versions.cfg
+    0base.cfg
 
 find-links +=
     http://dist.plone.org/release/4.3.3-pending
