--- a/buildout.d/cluster.cfg
+++ b/buildout.d/cluster.cfg
@@ -13,6 +13,9 @@ deprecation-warnings = off
 verbose-security = off
 
 eggs =
+    ZopeUndo
+    plone.app.blob
+    tempstorage
     Plone
     Pillow
 
@@ -38,6 +41,12 @@ parts =
 <= zeoserver_base
 recipe = plone.recipe.zeoserver
 zeo-address = 127.0.0.1:8100
+zeo-conf-additional +=
+    %import tempstorage
+    <temporarystorage temp>
+        name temporary storage for sessioning
+    </temporarystorage>
+
 
 [client1]
 <= client_base
