acrescentado a configuração do tempstorage no buildout.d/cluster.cfg

--- a/buildout.d/cluster.cfg
+++ b/buildout.d/cluster.cfg
@@ -41,10 +41,10 @@ parts =
 <= zeoserver_base
 recipe = plone.recipe.zeoserver
 zeo-address = 127.0.0.1:8100
-zeo-conf-additional +=
+zeo-conf-additional =
     %import tempstorage
     <temporarystorage temp>
-        name temporary storage for sessioning
+    	name temporary storage for sessioning
     </temporarystorage>
 
 
@@ -53,9 +53,18 @@ zeo-conf-additional +=
 recipe = plone.recipe.zope2instance
 zeo-address = ${zeoserver:zeo-address}
 http-address = 8080
+zodb-temporary-storage =
+    <zodb_db temporary>
+        mount-point /temp_folder
+        <zeoclient>
+            server 127.0.0.1:8100
+            storage temp
+            name zeo-temp-storage
+        </zeoclient>
+    </zodb_db>
 
 [client2]
-<= client_base
+<= client1
 recipe = plone.recipe.zope2instance
 zeo-address = ${zeoserver:zeo-address}
 http-address = 8081
