Correção do buildout.d/01-cluster.cfg, ambiente funcional novamente

--- a/buildout.d/01-cluster.cfg
+++ b/buildout.d/01-cluster.cfg
@@ -12,21 +12,21 @@ need-sudo = yes
 deprecation-warnings = off
 verbose-security = off
 
-eggs =
+eggs +=
     ZopeUndo
     plone.app.blob
     Plone
     Pillow
 
-zcml =
+zcml +=
 
-develop =
+develop +=
 
 var-dir=${buildout:directory}/var
 
 backups-dir=${buildout:var-dir}
 
-parts =
+parts +=
     zeoserver
     client1
     client2
